added Login and Signup Buttons

--- a/Código/Frontend/src/app/custom/custom-header/custom-header.component.html
+++ b/Código/Frontend/src/app/custom/custom-header/custom-header.component.html
@@ -18,6 +18,20 @@
           <svg cIcon name="cil-compass" size="lg"></svg>
         </a>
       </c-nav-item>
+      <c-nav-item title="Login">
+        <button class="customButton">
+          <a routerLink="/login" cNavLink>
+            Login
+          </a>
+        </button>
+      </c-nav-item>
+      <c-nav-item title="Register">
+        <button class="customButton">
+          <a routerLink="/register" cNavLink>
+            Sign Up
+          </a>
+        </button>
+      </c-nav-item>
     </c-header-nav>
   </div>
 
