create product - Added full stack implementation

--- a/Código/Frontend/src/app/pages/employee/create-product/create-product.component.html
+++ b/Código/Frontend/src/app/pages/employee/create-product/create-product.component.html
@@ -6,7 +6,7 @@
         <c-card class="mx-4">
           <c-card-body class="p-4">
             <form cForm [formGroup]="form" class="customAlign">
-              <h3>Create Drug</h3>
+              <h3>Create Product</h3>
               <c-input-group class="mb-3">
                 <span cInputGroupText>
                   <svg cIcon [cIcon]="icons.cilBarcode"></svg>
