frontend update product

--- a/Código/Frontend/src/app/pages/employee/employee/employee.component.html
+++ b/Código/Frontend/src/app/pages/employee/employee/employee.component.html
@@ -90,6 +90,24 @@
       </div>
     </div>
 
+    <div class="col-6 col-lg-3">
+      <div class="card">
+        <div class="card-block p-1 clearfix">
+          <i class="fa fa-cogs bg-primary p-1 font-2xl mr-1 float-left"></i>
+          <div class="h5 text-primary mb-0 mt-h">Product</div>
+          <div class="text-muted text-uppercase font-weight-bold font-xs">
+            Update
+          </div>
+        </div>
+        <div class="card-footer p-x-1 py-h customCardIcon">
+          <a class="font-weight-bold font-xs btn-block text-muted"
+          routerLink="/employee/delete-product">
+          <svg cIcon [cIcon]="icons.cilArrowThickRight"></svg>
+          </a>
+        </div>
+      </div>
+    </div>
+    
     <!--/.col-->
     <div class="col-6 col-lg-3">
       <div class="card">
